# testdatacenter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
configs/: db.yaml
configs/base/: default.yaml
configs/common/: gateway_auth.yaml  steps.yaml
configs/tasks/: _index.yaml  example_db_assertion.yaml  example_db_operations.yaml  example_gateway_flow.yaml  example_http.yaml  example_insert.yaml  order_payment_flow.yaml  user_base_info_insert.yaml
docs/: GIT_WORKFLOW.md
docs/config/: README.md
scripts/: init_db.sql
tdc/: cli.py
tdc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tdc/config/: __init__.py  cache.py  inheritance.py  loader.py  models.py  secrets.py  template_loader.py  watcher.py
tdc/core/: assertions.py  constants.py  db_assertions.py  exceptions.py  execution_stats.py  logger.py  models.py
tdc/generator/: engine.py  field_generator.py
tdc/pipeline/: context.py  engine.py  gateway_auth.py  http_client.py  user_provider.py
tdc/scheduler/: core.py  router.py
tdc/storage/: batch_insert.py  db_operations.py  mysql_pool.py  tag_store.py  task_log.py
tests/: conftest.py
tests/integration/: test_config_system.py  test_db_assertion_integration.py  test_db_operations_integration.py  test_gateway_auth_integration.py  test_template_integration.py
tests/unit/: test_config.py  test_context.py  test_core_models.py  test_db_assertions.py  test_db_operations.py  test_engine.py  test_gateway_auth.py  test_template_loader.py  test_user_provider.py
(+22 files in other folders)
