[project]
name = "tdc"
version = "0.1.0"
description = "Test Data Center - 测试数据生成中心"
requires-python = ">=3.12"
dependencies = [
    "apscheduler>=3.10.0",
    "httpx[http2]>=0.27.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "aiomysql>=0.2.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "jinja2>=3.1.0",
    "faker>=24.0.0",
    "click>=8.0.0",
    "structlog>=24.0.0",
    "pyyaml>=6.0",
    "jsonpath-ng>=1.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
]

[project.scripts]
tdc = "tdc.cli:main"
